force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Advanced_Criteria__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Advanced_Criteria__c</fullName>
    <description>This required field contains a reference to the Advanced Criteria to which this Requirement Template belongs.</description>
    <inlineHelpText>This required field contains a reference to the Advanced Criteria to which this Requirement Template belongs.</inlineHelpText>
    <label>Advanced Criteria</label>
    <referenceTo>LLC_BI__Advanced_Criteria__mdt</referenceTo>
    <relationshipLabel>Requirement Templates</relationshipLabel>
    <relationshipName>Requirement_Templates</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>