force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Checklist__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Checklist__c</fullName>
    <description>This required field contains a reference to the Checklist Template to which this Requirement Template belongs.</description>
    <inlineHelpText>This required field contains a reference to the Checklist Template to which this Requirement Template belongs.</inlineHelpText>
    <label>Checklist</label>
    <referenceTo>LLC_BI__Checklist_Template__mdt</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>